Added unit tests for services